--- a/Python code/ex1/ex1.ipynb
+++ b/Python code/ex1/ex1.ipynb
@@ -10,12 +10,92 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:11.981381Z",
-     "start_time": "2024-04-06T03:29:11.973403Z"
+     "end_time": "2024-04-06T04:31:06.362097Z",
+     "start_time": "2024-04-06T04:31:06.350731Z"
     }
    },
    "id": "initial_id",
-   "execution_count": 720
+   "execution_count": 752
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Machine Learning: Programming Exercise 1\n",
+    "## Linear Regression\n",
+    "In this exercise, you will implement linear regression and get to see it work on data."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cfbd9c36877b4978"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 1. A simple NumPy function\n",
+    "The first part of this script gives you practice with NumPy syntax and the homework submission process. In the file warmUpExercise.m, you will find the outline of a NumPy function. Modify it to return a 5 x 5 identity matrix by filling in the following code:\n",
+    "```\n",
+    "A = np.eye(5)\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "dca26b648af702ad"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "def warmup_exercise():\n",
+    "    A = np.eye(5)\n",
+    "    return A"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-06T04:31:06.633117Z",
+     "start_time": "2024-04-06T04:31:06.617482Z"
+    }
+   },
+   "id": "77ca0fc1adef6fc1",
+   "execution_count": 753
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "When you are finished, run the code contained in this section to call `warmup_exercise()`. \n",
+    "**5x5 Identity Matrix**:"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "db769cd4a26529ff"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[1., 0., 0., 0., 0.],\n       [0., 1., 0., 0., 0.],\n       [0., 0., 1., 0., 0.],\n       [0., 0., 0., 1., 0.],\n       [0., 0., 0., 0., 1.]])"
+     },
+     "execution_count": 754,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "warmup_exercise()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-06T04:31:06.663838Z",
+     "start_time": "2024-04-06T04:31:06.635412Z"
+    }
+   },
+   "id": "8b8c79fdd7034fad",
+   "execution_count": 754
   },
   {
    "cell_type": "markdown",
@@ -43,12 +123,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:12.044038Z",
-     "start_time": "2024-04-06T03:29:12.026126Z"
+     "end_time": "2024-04-06T04:31:06.679724Z",
+     "start_time": "2024-04-06T04:31:06.666053Z"
     }
    },
    "id": "cc12de9b2aa5d4e9",
-   "execution_count": 721
+   "execution_count": 755
   },
   {
    "cell_type": "markdown",
@@ -84,12 +164,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:12.091179Z",
-     "start_time": "2024-04-06T03:29:12.074958Z"
+     "end_time": "2024-04-06T04:31:06.711010Z",
+     "start_time": "2024-04-06T04:31:06.695957Z"
     }
    },
    "id": "60626509bd7731e8",
-   "execution_count": 722
+   "execution_count": 756
   },
   {
    "cell_type": "code",
@@ -109,12 +189,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:12.168607Z",
-     "start_time": "2024-04-06T03:29:12.092210Z"
+     "end_time": "2024-04-06T04:31:06.966003Z",
+     "start_time": "2024-04-06T04:31:06.744559Z"
     }
    },
    "id": "48edbe241cc1c59a",
-   "execution_count": 723
+   "execution_count": 757
   },
   {
    "cell_type": "markdown",
@@ -158,12 +238,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:12.183844Z",
-     "start_time": "2024-04-06T03:29:12.169700Z"
+     "end_time": "2024-04-06T04:31:06.981007Z",
+     "start_time": "2024-04-06T04:31:06.969542Z"
     }
    },
    "id": "974e82c42be41f9f",
-   "execution_count": 724
+   "execution_count": 758
   },
   {
    "cell_type": "markdown",
@@ -199,12 +279,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:12.199892Z",
-     "start_time": "2024-04-06T03:29:12.184853Z"
+     "end_time": "2024-04-06T04:31:07.020121Z",
+     "start_time": "2024-04-06T04:31:06.983219Z"
     }
    },
    "id": "13307650f9b113d6",
-   "execution_count": 725
+   "execution_count": 759
   },
   {
    "cell_type": "markdown",
@@ -223,7 +303,7 @@
      "data": {
       "text/plain": "32.072733877455676"
      },
-     "execution_count": 726,
+     "execution_count": 760,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,12 +315,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:12.215117Z",
-     "start_time": "2024-04-06T03:29:12.200975Z"
+     "end_time": "2024-04-06T04:31:07.035637Z",
+     "start_time": "2024-04-06T04:31:07.023837Z"
     }
    },
    "id": "d3cbe5a4108a3b78",
-   "execution_count": 726
+   "execution_count": 760
   },
   {
    "cell_type": "markdown",
@@ -259,7 +339,7 @@
      "data": {
       "text/plain": "54.24245508201238"
      },
-     "execution_count": 727,
+     "execution_count": 761,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,12 +351,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:12.230934Z",
-     "start_time": "2024-04-06T03:29:12.216249Z"
+     "end_time": "2024-04-06T04:31:07.050981Z",
+     "start_time": "2024-04-06T04:31:07.037864Z"
     }
    },
    "id": "6b578772388ebf6a",
-   "execution_count": 727
+   "execution_count": 761
   },
   {
    "cell_type": "markdown",
@@ -327,12 +407,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:12.246013Z",
-     "start_time": "2024-04-06T03:29:12.232049Z"
+     "end_time": "2024-04-06T04:31:07.065948Z",
+     "start_time": "2024-04-06T04:31:07.054302Z"
     }
    },
    "id": "f2018175d2a7a373",
-   "execution_count": 728
+   "execution_count": 762
   },
   {
    "cell_type": "markdown",
@@ -391,12 +471,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:12.399794Z",
-     "start_time": "2024-04-06T03:29:12.247250Z"
+     "end_time": "2024-04-06T04:31:07.355269Z",
+     "start_time": "2024-04-06T04:31:07.068622Z"
     }
    },
    "id": "9853539c875cc9cf",
-   "execution_count": 729
+   "execution_count": 763
   },
   {
    "cell_type": "markdown",
@@ -445,12 +525,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:12.476679Z",
-     "start_time": "2024-04-06T03:29:12.404602Z"
+     "end_time": "2024-04-06T04:31:07.528488Z",
+     "start_time": "2024-04-06T04:31:07.357098Z"
     }
    },
    "id": "6ce173d2f805399",
-   "execution_count": 730
+   "execution_count": 764
   },
   {
    "cell_type": "markdown",
@@ -492,12 +572,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:13.194769Z",
-     "start_time": "2024-04-06T03:29:12.477805Z"
+     "end_time": "2024-04-06T04:31:08.806907Z",
+     "start_time": "2024-04-06T04:31:07.532438Z"
     }
    },
    "id": "95ffce7d44ace904",
-   "execution_count": 731
+   "execution_count": 765
   },
   {
    "cell_type": "code",
@@ -523,12 +603,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:13.288581Z",
-     "start_time": "2024-04-06T03:29:13.196258Z"
+     "end_time": "2024-04-06T04:31:08.931859Z",
+     "start_time": "2024-04-06T04:31:08.808017Z"
     }
    },
    "id": "bacc4a4c90b36e87",
-   "execution_count": 732
+   "execution_count": 766
   },
   {
    "cell_type": "markdown",
@@ -607,12 +687,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:13.304685Z",
-     "start_time": "2024-04-06T03:29:13.289624Z"
+     "end_time": "2024-04-06T04:31:08.944763Z",
+     "start_time": "2024-04-06T04:31:08.933102Z"
     }
    },
    "id": "4724885dd18c08f8",
-   "execution_count": 733
+   "execution_count": 767
   },
   {
    "cell_type": "markdown",
@@ -662,12 +742,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T04:05:15.624011Z",
-     "start_time": "2024-04-06T04:05:15.593991Z"
+     "end_time": "2024-04-06T04:31:08.960284Z",
+     "start_time": "2024-04-06T04:31:08.946121Z"
     }
    },
    "id": "838fa260d3ea0c6e",
-   "execution_count": 747
+   "execution_count": 768
   },
   {
    "cell_type": "markdown",
@@ -689,12 +769,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:13.336441Z",
-     "start_time": "2024-04-06T03:29:13.321793Z"
+     "end_time": "2024-04-06T04:31:08.976352Z",
+     "start_time": "2024-04-06T04:31:08.962878Z"
     }
    },
    "id": "4b5c60ebfe637f39",
-   "execution_count": 735
+   "execution_count": 769
   },
   {
    "cell_type": "markdown",
@@ -727,12 +807,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:13.352172Z",
-     "start_time": "2024-04-06T03:29:13.337545Z"
+     "end_time": "2024-04-06T04:31:08.991483Z",
+     "start_time": "2024-04-06T04:31:08.978436Z"
     }
    },
    "id": "fa025fd9298a1ed5",
-   "execution_count": 736
+   "execution_count": 770
   },
   {
    "cell_type": "markdown",
@@ -784,12 +864,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:13.367270Z",
-     "start_time": "2024-04-06T03:29:13.353222Z"
+     "end_time": "2024-04-06T04:31:09.007168Z",
+     "start_time": "2024-04-06T04:31:08.992545Z"
     }
    },
    "id": "6e9e766d2e3203b5",
-   "execution_count": 737
+   "execution_count": 771
   },
   {
    "cell_type": "code",
@@ -816,12 +896,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:13.382551Z",
-     "start_time": "2024-04-06T03:29:13.368406Z"
+     "end_time": "2024-04-06T04:31:09.022881Z",
+     "start_time": "2024-04-06T04:31:09.009348Z"
     }
    },
    "id": "894a32da4cb8cf00",
-   "execution_count": 738
+   "execution_count": 772
   },
   {
    "cell_type": "code",
@@ -853,12 +933,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:13.398219Z",
-     "start_time": "2024-04-06T03:29:13.383581Z"
+     "end_time": "2024-04-06T04:31:09.054154Z",
+     "start_time": "2024-04-06T04:31:09.023962Z"
     }
    },
    "id": "71eb86c96330d779",
-   "execution_count": 739
+   "execution_count": 773
   },
   {
    "cell_type": "markdown",
@@ -891,12 +971,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:13.413348Z",
-     "start_time": "2024-04-06T03:29:13.399319Z"
+     "end_time": "2024-04-06T04:31:09.070446Z",
+     "start_time": "2024-04-06T04:31:09.054933Z"
     }
    },
    "id": "cde6db0c8f94c86d",
-   "execution_count": 740
+   "execution_count": 774
   },
   {
    "cell_type": "markdown",
@@ -947,12 +1027,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:15.151598Z",
-     "start_time": "2024-04-06T03:29:13.414454Z"
+     "end_time": "2024-04-06T04:31:11.213073Z",
+     "start_time": "2024-04-06T04:31:09.071532Z"
     }
    },
    "id": "7301f76d2e8cb9eb",
-   "execution_count": 741
+   "execution_count": 775
   },
   {
    "cell_type": "markdown",
@@ -994,12 +1074,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:15.166437Z",
-     "start_time": "2024-04-06T03:29:15.152402Z"
+     "end_time": "2024-04-06T04:31:11.228600Z",
+     "start_time": "2024-04-06T04:31:11.214164Z"
     }
    },
    "id": "6db88aa4c79c39ff",
-   "execution_count": 742
+   "execution_count": 776
   },
   {
    "cell_type": "code",
@@ -1022,12 +1102,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:15.181653Z",
-     "start_time": "2024-04-06T03:29:15.167499Z"
+     "end_time": "2024-04-06T04:31:11.259799Z",
+     "start_time": "2024-04-06T04:31:11.229889Z"
     }
    },
    "id": "38a15b5906e3cd16",
-   "execution_count": 743
+   "execution_count": 777
   },
   {
    "cell_type": "markdown",
@@ -1061,12 +1141,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:15.197273Z",
-     "start_time": "2024-04-06T03:29:15.182750Z"
+     "end_time": "2024-04-06T04:31:11.274680Z",
+     "start_time": "2024-04-06T04:31:11.260912Z"
     }
    },
    "id": "4e87d6ed633f92d3",
-   "execution_count": 744
+   "execution_count": 778
   },
   {
    "cell_type": "code",
@@ -1102,12 +1182,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:15.213142Z",
-     "start_time": "2024-04-06T03:29:15.198382Z"
+     "end_time": "2024-04-06T04:31:11.296301Z",
+     "start_time": "2024-04-06T04:31:11.276691Z"
     }
    },
    "id": "e510fc6bc546f984",
-   "execution_count": 745
+   "execution_count": 779
   },
   {
    "cell_type": "markdown",
@@ -1139,12 +1219,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-06T03:29:15.228258Z",
-     "start_time": "2024-04-06T03:29:15.214187Z"
+     "end_time": "2024-04-06T04:31:11.311559Z",
+     "start_time": "2024-04-06T04:31:11.299514Z"
     }
    },
    "id": "636ec925105f825f",
-   "execution_count": 746
+   "execution_count": 780
   }
  ],
  "metadata": {
